Fix overflow

--- a/src/main.css
+++ b/src/main.css
@@ -232,3 +232,7 @@
 .pc-preview:hover .pc-preview-overlay {
   opacity: 100%;
 }
+
+.pc-overflow {
+  overflow: hidden;
+}
